@@ -1,3 +1,4 @@
 [#201] Implement fetch() in the DAS API
 [#223] Updates in docstrings and logging messages
 [#210] Improve message error when connecting to the server
+[#214] Improve fetch() method to fetch all the atoms
